--- a/app/src/main/res/layout/fragment_movs.xml
+++ b/app/src/main/res/layout/fragment_movs.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/secondaryColor"
+    style="@style/Theme.Submission2fx"
     tools:context=".MoviesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -51,7 +51,6 @@
         fab:menu_showShadow="true">
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/popularity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_star"
